@@ -15,6 +15,8 @@
 - Changed the $context parameter on copy() to actually have an effect. (Kalle)
 - Fixed possible crash in mssql_fetch_batch(). (Kalle)
 
+- Fixed bug #52681 (mb_send_mail() appends an extra MIME-Version header).
+  (Adam)
 - Fixed bug #52674 (FPM Status page returns inconsistent Content-Type headers).
   (fat)
 - Fixed bug #52654 (mysqli doesn't install headers with structures it uses).
